--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "exampledb",
+    "username": "Bob",
+    "password": "ArianaGrande123!",
+    "database": "burgers_db",
     "host": "localhost",
     "dialect": "mysql"
   },
